--- a/requirements.txt
+++ b/requirements.txt
@@ -10,21 +10,29 @@ asyncpg==0.29.0
 attrs==23.1.0
 certifi==2023.11.17
 dill==0.3.7
+envparse==0.2.0
+exceptiongroup==1.2.0
 frozenlist==1.4.0
 greenlet==3.0.1
 idna==3.6
+iniconfig==2.0.0
 isort==5.12.0
 magic-filter==1.0.12
 Mako==1.3.0
 MarkupSafe==2.1.3
 mccabe==0.7.0
 multidict==6.0.4
+packaging==23.2
 platformdirs==4.0.0
+pluggy==1.3.0
 pydantic==2.5.2
 pydantic_core==2.14.5
 pylint==3.0.2
+pytest==7.4.3
+pytest-tornasync==0.6.0.post2
 SQLAlchemy==2.0.23
 tomli==2.0.1
 tomlkit==0.12.3
+tornado==6.4
 typing_extensions==4.8.0
 yarl==1.9.3
